syntax = "proto3";

option go_package = "GoGrpcGenerated/FoodCompanyGateWay";

message GetOrderStatusRequest {
  string id = 1;
}

message GetOrderStatusResponse {
  enum Status {
    Done = 0;
    Pending = 1;
    Cancelled = 2;
  }
  Status status = 1;
  optional string owner = 2;
}

service FoodCompanyGateWayService {
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
}